syntax = "proto3";
package mvirt.node;

// NodeService - Single bidirectional stream for node â†” API communication.
//
// Replaces separate Register/Heartbeat/Deregister/WatchSpecs/UpdateResourceStatus RPCs
// with a level-triggered manifest sync model.
service NodeService {
    rpc Sync(stream NodeMessage) returns (stream ApiMessage);
}

// =============================================================================
// Bidirectional Stream Messages
// =============================================================================

message NodeMessage {
    oneof payload {
        RegisterNode register = 1;     // First message on stream
        Heartbeat heartbeat = 2;       // Periodic keepalive + resource update
        StatusUpdate status = 3;       // Resource status reports
    }
}

message RegisterNode {
    string node_id = 1;               // Empty = generate new
    string name = 2;
    string address = 3;
    NodeResources resources = 4;
    map<string, string> labels = 5;
}

message Heartbeat {
    NodeResources current_resources = 1;
}

message StatusUpdate {
    repeated VmStatus vms = 1;
    repeated NicStatus nics = 2;
    repeated TemplateStatus templates = 3;
    repeated VolumeStatus volumes = 4;
    repeated SecurityGroupStatus security_groups = 5;
    repeated RouteStatus routes = 6;
}

message ApiMessage {
    oneof payload {
        RegisterResult register_result = 1;
        NodeManifest manifest = 2;
    }
}

message RegisterResult {
    string node_id = 1;
    bool success = 2;
    string message = 3;
}

message NodeManifest {
    uint64 revision = 1;
    repeated VmSpec vms = 2;
    repeated NetworkSpec networks = 3;
    repeated NicSpec nics = 4;
    repeated VolumeSpec volumes = 5;
    repeated TemplateSpec templates = 6;
    repeated SecurityGroupSpec security_groups = 7;
    repeated RouteSpec routes = 8;
}

// =============================================================================
// Common Types
// =============================================================================

message NodeResources {
    uint32 cpu_cores = 1;
    uint64 memory_mb = 2;
    uint64 storage_gb = 3;
    uint32 available_cpu_cores = 4;
    uint64 available_memory_mb = 5;
    uint64 available_storage_gb = 6;
}

message ResourceMeta {
    string id = 1;
    string name = 2;
    string project_id = 3;
    optional string node_id = 4;
    map<string, string> labels = 5;
}

// Common resource phase (for resources with status)
enum ResourcePhase {
    RESOURCE_PHASE_UNSPECIFIED = 0;
    RESOURCE_PHASE_PENDING = 1;
    RESOURCE_PHASE_CREATING = 2;
    RESOURCE_PHASE_READY = 3;
    RESOURCE_PHASE_UPDATING = 4;
    RESOURCE_PHASE_DELETING = 5;
    RESOURCE_PHASE_FAILED = 6;
}

// VM-specific phase
enum VmPhase {
    VM_PHASE_UNSPECIFIED = 0;
    VM_PHASE_PENDING = 1;
    VM_PHASE_SCHEDULED = 2;
    VM_PHASE_CREATING = 3;
    VM_PHASE_RUNNING = 4;
    VM_PHASE_STOPPING = 5;
    VM_PHASE_STOPPED = 6;
    VM_PHASE_FAILED = 7;
}

enum VmDesiredState {
    VM_DESIRED_STATE_UNSPECIFIED = 0;
    VM_DESIRED_STATE_RUNNING = 1;
    VM_DESIRED_STATE_STOPPED = 2;
}

// =============================================================================
// NetworkSpec (Info-only, no status)
// =============================================================================

message NetworkSpec {
    ResourceMeta meta = 1;
    bool ipv4_enabled = 2;
    string ipv4_prefix = 3;
    bool ipv6_enabled = 4;
    string ipv6_prefix = 5;
    repeated string dns_servers = 6;
    repeated string ntp_servers = 7;
    bool is_public = 8;
}

// =============================================================================
// VmSpec / VmStatus
// =============================================================================

message VmSpec {
    ResourceMeta meta = 1;
    uint32 cpu_cores = 2;
    uint64 memory_mb = 3;
    string volume_id = 4;
    string volume_name = 10;
    string nic_id = 5;
    string image = 6;
    VmDesiredState desired_state = 7;
}

message VmStatus {
    string id = 1;
    VmPhase phase = 2;
    optional string message = 3;
    optional string ip_address = 4;
    optional uint64 pid = 5;
}

// =============================================================================
// NicSpec / NicStatus
// =============================================================================

message NicSpec {
    ResourceMeta meta = 1;
    string network_id = 2;
    string mac_address = 3;
    optional string ipv4_address = 4;
    optional string ipv6_address = 5;
    repeated string routed_ipv4_prefixes = 6;
    repeated string routed_ipv6_prefixes = 7;
    string security_group_id = 8;
}

message NicStatus {
    string id = 1;
    ResourcePhase phase = 2;
    optional string message = 3;
    string socket_path = 4;
}

// =============================================================================
// TemplateSpec / TemplateStatus
// =============================================================================

message TemplateSpec {
    ResourceMeta meta = 1;
    string url = 2;
    optional string checksum = 3;
}

message TemplateStatus {
    string id = 1;
    ResourcePhase phase = 2;
    optional string message = 3;
    uint64 size_bytes = 4;
    string local_path = 5;
}

// =============================================================================
// VolumeSpec / VolumeStatus
// =============================================================================

message VolumeSpec {
    ResourceMeta meta = 1;
    uint64 size_bytes = 2;
    optional string template_id = 3;
    optional string attached_vm_id = 4;
}

message VolumeStatus {
    string id = 1;
    ResourcePhase phase = 2;
    optional string message = 3;
    string zfs_path = 4;
    string device_path = 5;
    uint64 used_bytes = 6;
}

// =============================================================================
// SecurityGroupSpec / SecurityGroupStatus
// =============================================================================

message SecurityGroupSpec {
    ResourceMeta meta = 1;
    repeated SecurityRule rules = 2;
}

message SecurityRule {
    string id = 1;
    RuleDirection direction = 2;
    RuleProtocol protocol = 3;
    optional uint32 port_start = 4;
    optional uint32 port_end = 5;
    oneof target {
        string cidr = 6;
        string security_group_id = 7;
    }
}

enum RuleDirection {
    RULE_DIRECTION_UNSPECIFIED = 0;
    RULE_DIRECTION_INGRESS = 1;
    RULE_DIRECTION_EGRESS = 2;
}

enum RuleProtocol {
    RULE_PROTOCOL_UNSPECIFIED = 0;
    RULE_PROTOCOL_ALL = 1;
    RULE_PROTOCOL_TCP = 2;
    RULE_PROTOCOL_UDP = 3;
    RULE_PROTOCOL_ICMP = 4;
    RULE_PROTOCOL_ICMPV6 = 5;
}

message SecurityGroupStatus {
    string id = 1;
    ResourcePhase phase = 2;
    optional string message = 3;
    uint32 rule_count = 4;
}

// =============================================================================
// RouteSpec / RouteStatus
// =============================================================================

message RouteSpec {
    ResourceMeta meta = 1;
    string destination = 2;
    string tunnel_remote = 3;
}

message RouteStatus {
    string id = 1;
    ResourcePhase phase = 2;
    optional string message = 3;
    bool active = 4;
}
